Updated host names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,22 +10,22 @@ services:
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
     networks:
-      - dev-network
+      - dev
   php:
     build: ./services/php/.
     restart: always
     environment:
-      VIRTUAL_HOST: php.docker
+      VIRTUAL_HOST: php.local
     volumes:
       - ./services/php/src:/var/www/html/php/public
     networks:
-      - dev-network
+      - dev
   mysql:
     image: mysql:8.0.30
     restart: always
     environment:
       TZ: Europe/London
-      VIRTUAL_HOST: mysql.docker
+      VIRTUAL_HOST: mysql.local
       MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: docker
       MYSQL_PASSWORD: docker
@@ -34,17 +34,17 @@ services:
     volumes:
       - ./services/mysql/dumps:/docker-entrypoint-initdb.d
     networks:
-      - dev-network
+      - dev
   adminer:
     build: ./services/adminer/.
     restart: always
     environment:
-      VIRTUAL_HOST: adminer.docker
+      VIRTUAL_HOST: adminer.local
       ADMINER_DEFAULT_SERVER: mysql
       ADMINER_DESIGN: konya
     networks:
       - dev-network
 
 networks:
-  dev-network:
+  dev:
     external: true
