--- a/services/php/vhost.conf
+++ b/services/php/vhost.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerName php.docker
+    ServerName php.local
     DocumentRoot /var/www/html/php/public
 
     <Directory /var/www/html/php/public>
