Added mongo express docker

--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,22 @@
 #!/usr/bin/env bash
 
+# PHP
+PHP_HOST=php.local
+
+# MySQL
+MYSQL_HOST=mysql.local
+MYSQL_ROOT_PASSWORD=
+MYSQL_USER_NAME=
+MYSQL_USER_PASSWORD=
+
+# Adminer
+ADMINER_HOST=adminer.local
+
 # MongoDB
 MONGO_HOST=mongodb.local
-MONGO_ROOT_USER=root
-MONGO_ROOT_PASSWORD=root
+MONGO_ROOT_USER=
+MONGO_ROOT_PASSWORD=
 MONGO_PORT=27017
+
+# Mongo Express
+MONGO_EXPRESS_HOST=mongoexpress.local
