--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     build: ./services/php/.
     restart: always
     environment:
-      VIRTUAL_HOST: php.local
+      VIRTUAL_HOST: ${PHP_HOST}
     volumes:
       - ./services/php/src:/var/www/html/php/public
     networks:
@@ -25,10 +25,10 @@ services:
     restart: always
     environment:
       TZ: Europe/London
-      VIRTUAL_HOST: mysql.local
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_USER: docker
-      MYSQL_PASSWORD: docker
+      VIRTUAL_HOST: ${MYSQL_HOST}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER_NAME}
+      MYSQL_PASSWORD: ${MYSQL_USER_PASSWORD}
     ports:
       - 3306:3306
     volumes:
@@ -40,9 +40,11 @@ services:
     build: ./services/adminer/.
     restart: always
     environment:
-      VIRTUAL_HOST: adminer.local
+      VIRTUAL_HOST: ${ADMINER_HOST}
       ADMINER_DEFAULT_SERVER: mysql
       ADMINER_DESIGN: konya
+    depends_on:
+        - mysql
     networks:
       - dev
   mongodb:
@@ -59,6 +61,18 @@ services:
     volumes:
       - ./services/mongodb/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - ./services/mongodb/mongod.conf:/etc/mongod.conf
+  mongoexpress:
+    image: mongo-express
+    restart: always
+    environment:
+      VIRTUAL_HOST: ${MONGO_EXPRESS_HOST}
+      ME_CONFIG_MONGODB_SERVER: mongodb
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ROOT_USER}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_ROOT_PASSWORD}
+    depends_on:
+        - mongodb
+    networks:
+      - dev
 
 networks:
   dev:
